--- a/flex.html
+++ b/flex.html
@@ -60,8 +60,8 @@
 
       <h2 id = "gallery">Gallery</h2>
         <div class="gallery"> 
-          <img id="image1" src="images/sample.jpg" alt="" />
-          <img id="image2" src="images/logo.png" alt="" />
+          <img id="image1" src="images/sample.jpg" alt="Sample" />
+          <img id="image2" src="images/logo.png" alt="Logo" />
           <img id="image3" src="images/sample.jpg" alt="" />
           <img id="image4" src="images/logo.png" alt="" />
           <img id="image5" src="images/sample.jpg" alt="" />
